--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.15.2"
+    "express": "^4.15.2",
+    "uuid": "^8.3.2"
   },
   "keywords": [
     "node",
