--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.15.2",
     "uuid": "^8.3.2"
   },
@@ -18,5 +19,8 @@
     "heroku",
     "express"
   ],
-  "license": "MIT"
+  "license": "MIT",
+  "prettier": {
+    "printWidth": 55
+  }
 }
