--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tc-todo-2022",
+  "name": "todos-server-ohmycode",
   "version": "1.0.0",
   "description": "A stateless todo app",
   "engines": {
@@ -12,11 +12,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.15.2",
+    "heroku": "^7.60.1",
     "uuid": "^8.3.2"
   },
   "keywords": [
     "node",
-    "heroku",
     "express"
   ],
   "license": "MIT",
